assets/deployments/supervisor/supervisor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: supervisor
spec:
  selector:
    app: supervisor
  ports:
  - name: http
    protocol: TCP
    port: 5020
    targetPort: 5020
#  type: LoadBalancer
