assets/deployments/supervisor/supervisor-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: supervisor
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.backend.loadbalancer.stickiness=true
spec:
  rules:
  - host: --DNS_NAME--
    http:
      paths:
      - path: /supervisor
        backend:
          serviceName: supervisor
          servicePort: 5020
